# location-manager-tauri

./: package.json
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
